Fix deckview set overflowing bug

--- a/src/client/styles/deckview.less
+++ b/src/client/styles/deckview.less
@@ -15,6 +15,14 @@
 			margin-bottom: 0em;
 		}
 
+		.set-tags{
+			max-height: 80px;
+			overflow-y: auto;
+			.ant-tag{
+				margin-bottom: 3px;
+			}
+		}
+
 		.btn-claim{
 			margin-left: 10px;
 		}
